// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: CustomButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.2}
  collapsable={false}
  delayLongPress={600}
  enabled={true}
  handlerTag={7}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  rippleColor="rgba(255, 255, 255, 0.2)"
  style={
    [
      {
        "backgroundColor": "purple",
        "borderRadius": 4,
        "justifyContent": "center",
        "marginBottom": 12,
        "padding": 10,
        "paddingHorizontal": 16,
        "paddingVertical": 14,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="transparent"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "transparent",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 4,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "yellow",
          "fontSize": 18,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "500",
          "textAlign": "center",
        },
        [
          {
            "textAlign": "left",
          },
        ],
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: DisabledButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.2}
  collapsable={false}
  delayLongPress={600}
  enabled={false}
  handlerTag={8}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  rippleColor="rgba(255, 255, 255, 0.2)"
  style={
    [
      {
        "backgroundColor": "#D1EBFE",
        "borderRadius": 4,
        "justifyContent": "center",
        "marginBottom": 12,
        "paddingHorizontal": 16,
        "paddingVertical": 14,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="transparent"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "transparent",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 4,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "500",
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: DisabledLoadingButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.2}
  collapsable={false}
  delayLongPress={600}
  enabled={false}
  handlerTag={9}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  rippleColor="rgba(255, 255, 255, 0.2)"
  style={
    [
      {
        "backgroundColor": "#D1EBFE",
        "borderRadius": 4,
        "justifyContent": "center",
        "marginBottom": 12,
        "paddingHorizontal": 16,
        "paddingVertical": 14,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="transparent"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "transparent",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 4,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <ActivityIndicator
    color="#FFFFFF"
    style={
      {
        "padding": 0,
      }
    }
  />
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: LoadingButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.2}
  collapsable={false}
  delayLongPress={600}
  enabled={false}
  handlerTag={10}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  rippleColor="rgba(255, 255, 255, 0.2)"
  style={
    [
      {
        "backgroundColor": "#D1EBFE",
        "borderRadius": 4,
        "justifyContent": "center",
        "marginBottom": 12,
        "paddingHorizontal": 16,
        "paddingVertical": 14,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="transparent"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "transparent",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 4,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <ActivityIndicator
    color="#FFFFFF"
    style={
      {
        "padding": 0,
      }
    }
  />
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: PrimaryButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.2}
  collapsable={false}
  delayLongPress={600}
  enabled={true}
  handlerTag={11}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  rippleColor="rgba(255, 255, 255, 0.2)"
  style={
    [
      {
        "backgroundColor": "#156FF5",
        "borderRadius": 4,
        "justifyContent": "center",
        "marginBottom": 12,
        "paddingHorizontal": 16,
        "paddingVertical": 14,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="transparent"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "transparent",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 4,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "500",
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: SecondaryButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.2}
  collapsable={false}
  delayLongPress={600}
  enabled={true}
  handlerTag={12}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  rippleColor="rgba(0, 0, 0, 0.12)"
  style={
    [
      {
        "backgroundColor": "#E4E7EA",
        "borderRadius": 4,
        "justifyContent": "center",
        "marginBottom": 12,
        "paddingHorizontal": 16,
        "paddingVertical": 14,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="transparent"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "transparent",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 4,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "#2F343D",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontWeight": "500",
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;

exports[`Story Snapshots: SmallButton should match snapshot 1`] = `
<RNGestureHandlerButton
  accessibilityLabel="Press me!"
  accessibilityRole="button"
  activeOpacity={0.2}
  collapsable={false}
  delayLongPress={600}
  enabled={true}
  handlerTag={13}
  handlerType="NativeViewGestureHandler"
  innerRef={null}
  onActiveStateChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onPress={[Function]}
  rippleColor="rgba(255, 255, 255, 0.2)"
  style={
    [
      {
        "alignSelf": "center",
        "backgroundColor": "#156FF5",
        "borderRadius": 4,
        "marginBottom": 12,
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      },
      {
        "cursor": undefined,
      },
    ]
  }
  testID="testButton"
  underlayColor="transparent"
>
  <View
    collapsable={false}
    style={
      {
        "backgroundColor": "transparent",
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderRadius": 4,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <Text
    style={
      [
        {
          "color": "#FFFFFF",
          "fontSize": 16,
        },
        {
          "backgroundColor": "transparent",
          "fontFamily": "Inter",
          "fontSize": 12,
          "fontWeight": "700",
          "lineHeight": 18,
          "textAlign": "left",
        },
        undefined,
      ]
    }
  >
    Press me!
  </Text>
</RNGestureHandlerButton>
`;
